# POO-OOP---Nature-Reserve-Simulator

poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/: Grupo_de_Trabalho.txt
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/: CMakeLists.txt  main.cpp
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Alimentos/: Alimento.cpp  Alimento.h  Batata.h  Bife.h  Cenoura.h  Corpo.h  OvoDragao.h  Relva.h
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Animais/: Animal.cpp  Animal.h  Canguru.h  Coelho.h  Dragao.h  Lobo.h  Ovelha.h
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Comandos/: Comandos.cpp  Comandos.h
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Historico/: Historico.cpp  Historico.h
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Inicio/: Iniciar.cpp  Iniciar.h
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Interface/: Interface.cpp  Interface.h
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Reserva/: Reserva.cpp  Reserva.h
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Store/: Store.h
poo_2223_tp_m2_FilipeOliveira_2018018618_PedroPraca_2020130980/SimuladorReservaNatural/Terminal/: Terminal.h
